- Updated .css file to refine design elements - Fixed staticfiles_dirs configuration to ensure all static files are served correctly

--- a/templates/comments/comment_list.html
+++ b/templates/comments/comment_list.html
@@ -4,14 +4,15 @@
     <title>Комментарии</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    
 </head>
 <body>
     <h1>Комментарии</h1>
-    <form method="post" action="{% url 'add_comment' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Добавить комментарий</button>
-    </form>
+<form method="post" action="{% url 'add_comment' %}" class="comment-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="submit-button">Добавить комментарий</button>
+</form>
     <hr>
     <h2>Список комментариев</h2>
     <div id="comments">
