--- a/templates/comments/comment_list.html
+++ b/templates/comments/comment_list.html
@@ -31,7 +31,7 @@
     <main class="container my-4">
         <form id="comment-form" method="post" action="{% url 'add_comment' %}" class="mb-4">
             {% csrf_token %}
-            
+
             <!-- Toolbar for HTML tags -->
             <div class="toolbar">
                 <button type="button" class="btn btn-outline-secondary" onclick="addTag('[i]')">[i]</button>
@@ -53,7 +53,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ comment.username|escape }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ comment.email|escape }}</h6>
-                        <p class="card-text">{{ comment.text|escape }}</p>
+                        <p class="card-text">{{ comment.text|safe }}</p>
                         <footer class="blockquote-footer"><cite title="Source Title">{{ comment.created_at }}</cite></footer>
 
                         <!-- Кнопка для отображения формы ответа -->
@@ -75,7 +75,7 @@
                                     <div class="card-body">
                                         <h6 class="card-title">{{ reply.username|escape }}</h6>
                                         <h6 class="card-subtitle mb-2 text-muted">{{ reply.email|escape }}</h6>
-                                        <p class="card-text">{{ reply.text|escape }}</p>
+                                        <p class="card-text">{{ reply.text|safe }}</p>
                                         <footer class="blockquote-footer"><cite title="Source Title">{{ reply.created_at }}</cite></footer>
                                     </div>
                                 </div>
